--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="labpadre_cams">LabPadre Cams</string>
     <string name="scheduled_road_closures">Scheduled road closures</string>
     <string name="noRoadClosuresScheduled">There are no road closures scheduled.</string>
+    <string name="network_not_available">Network Not Available</string>
 </resources>
